--- a/filme/templates/editarperfil.html
+++ b/filme/templates/editarperfil.html
@@ -8,7 +8,7 @@ Editar Perfil
 
 {% block content %}
  
-    <header class="min-h-screen bg-black bg-opacity-75 bg-blend-overlay showcase border-gray-600 border-b-8 flex justify-center items-center bg-no-repeat" style="background-image: url('{% static "images/background_netflix.jpg" %}');">
+    <header class="min-h-screen bg-black bg-opacity-75 bg-blend-overlay showcase border-gray-600 border-b-8 flex justify-center items-center bg-no-repeat" style="background-image: url({% static 'images/background_netflix.jpg' %});">
         <div class="z-10 h-full py-32 md:py-0 text-gray-100 text-center flex items-center flex-col">
             <h2 class="text-2xl">{{ user.email }}</h2>
             <form method="post">
